mySQL DB v2, Schemas edited

--- a/Lerneinheit/css/learningUnit.css
+++ b/Lerneinheit/css/learningUnit.css
@@ -270,7 +270,7 @@ input[type=submit]:disabled {
     padding: 0 250px;
 }
 
-#experiment-id {
+#schoolchild-name {
     width: 380px;
     text-align: center;
     font-size: 19px;
