--- a/EyeTrackingTest/eyetrackingstyle.css
+++ b/EyeTrackingTest/eyetrackingstyle.css
@@ -36,6 +36,7 @@ html, body {
     border-style: solid;
     border-width: 2px;
     border-color: black;
+    cursor: pointer;
 }
 
 .cross {
@@ -49,6 +50,7 @@ html, body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    cursor: pointer;
 
 }
 
