--- a/Lerneinheit/css/learningUnit.css
+++ b/Lerneinheit/css/learningUnit.css
@@ -259,7 +259,7 @@ input[type=submit]:disabled {
 
 .preamble {
     position: absolute;
-    left: 0;
+    left: 100px;
     height: 100%;
     background-color: var(--backgroundColor);
     align-items: center;
