--- a/EyeTrackingTest/css/eyetrackingstyle.css
+++ b/EyeTrackingTest/css/eyetrackingstyle.css
@@ -1,8 +1,3 @@
-html, body {
-    margin: 0 !important;
-    padding: 0 !important;
-}
-
 .callibration-point {
     background-color: red;
 }
@@ -22,15 +17,17 @@ html, body {
 
 .circles {
     display: none;
+    margin: 0;
+    padding: 0;
 }
 
 .callibration-circle {
-    width: 1.5vw  !important;
+    width: 1.5vw !important;
     height: 1.5vw !important;;
     position: absolute;
     background: red;
     display: flex;
-    padding: 0 !important;
+    padding: 0;
     align-items: center;
     justify-content: center;
     -moz-border-radius: 50px;
@@ -61,7 +58,7 @@ html, body {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 50%);
+    background-color: rgb(139, 139, 139);
     z-index: 4;
 }
 
