--- a/EyeTrackingTest/css/learningUnit.css
+++ b/EyeTrackingTest/css/learningUnit.css
@@ -259,8 +259,9 @@ input[type=submit]:disabled {
 .preamble {
     position: absolute;
     left: 0;
-    width: 98vw;
+    width: 100%;
     height: 100%;
+    padding: 0;
     background-color: var(--backgroundColor);
     display: flex;
     align-items: center;
