--- a/EyeTrackingTest/css/defaultTheme.css
+++ b/EyeTrackingTest/css/defaultTheme.css
@@ -34,4 +34,7 @@
 
     --chapterSelectFontSize: 1.3em;
     --chapterSelectFontColor: blue;
+
+    --helpButtonBackgroundColor: #418800;
+    --helpSectionBackgroundCOlor: #0058ff;
 }
