--- a/EyeTrackingTest/css/learningUnit.css
+++ b/EyeTrackingTest/css/learningUnit.css
@@ -6,9 +6,9 @@ body {
 }
 
 * {
-    padding-left: 10px;
-    padding-right: 15px;
-    margin: 0;
+    /*padding-left: 10px;*/
+    /*padding-right: 15px;*/
+    /*margin: 0;*/
 }
 
 :root {
