--- a/EyeTrackingTest/css/eyetrackingstyle.css
+++ b/EyeTrackingTest/css/eyetrackingstyle.css
@@ -25,7 +25,7 @@
     width: 1.5vw !important;
     height: 1.5vw !important;
     position: absolute !important;
-    background: red !important;
+    background: red;
     display: flex !important;
     padding-left: 0 !important;
     padding-right: 0 !important;
