--- a/EyeTrackingTest/css/defaultTheme.css
+++ b/EyeTrackingTest/css/defaultTheme.css
@@ -35,6 +35,7 @@
     --chapterSelectFontSize: 1.3em;
     --chapterSelectFontColor: blue;
 
-    --helpButtonBackgroundColor: #418800;
-    --helpSectionBackgroundCOlor: #0058ff;
+    --helpButtonBackgroundColor: blue;
+    --helpSectionBackgroundCOlor: #668DF3FF;
+;
 }
