--- a/EyeTrackingTest/css/learningUnit.css
+++ b/EyeTrackingTest/css/learningUnit.css
@@ -258,11 +258,14 @@ input[type=submit]:disabled {
 
 
 .preamble {
-    position: absolute;
-    left: 0;
-    height: 100%;
-    background-color: var(--backgroundColor);
+    position: fixed;
     width: 80vw;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--backgroundColor);
     align-items: center;
     justify-content: center;
     display: flex;
